Revise accordion panel inner spacing fix
Compensate the last segment slat negative bottom margin using a margin instead of tweaking padding because this leads to a correct panel inner height.

--- a/source/components/accordion.scss
+++ b/source/components/accordion.scss
@@ -66,7 +66,7 @@
     padding-bottom: $space-standard;
 
     @at-root .accordion-segment:last-child & {
-      padding-top: calc(#{$space-small-e} + #{$border-width-standard});
+      margin-top: $border-width-standard;
       padding-bottom: calc(#{$space-standard} - #{$border-width-standard});
     }
   }
